--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,19 +40,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cmake generate
-        working-directory: ${{ github.workspace }}
-        run: ${{env.QT_ROOT_DIR}}\bin\qt-cmake.bat -G Ninja -S . -B out
+        run: ${{env.QT_ROOT_DIR}}\bin\qt-cmake.bat -G Ninja -S . -B build
 
       - name: Cmake build
-        working-directory: ${{ github.workspace }}
-        run: cmake --build out
+        run: cmake --build build
 
       - name: List contents of the build directory
-        run: ls -R ${{ runner.temp }}\build
-
-      # Upload the compiled .exe as an artifact so other jobs can retrieve it
+        run: ls -R build
+        
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: StrataBro
-          path: x64\Release\StrataBro.exe
+          path: build\StrataBro.exe
