--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # Install Qt via community action
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
         with:
@@ -29,12 +28,6 @@ jobs:
           setup-python: "false"
           cache: "true"
           dir: ${{ runner.temp }}
-
-      # Set up the MSVC developer environment so msbuild is available
-      - name: Set up MSVC
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: x64
           
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,4 +45,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: StrataBro
-          path: build\StrataBro.exe
+          path: |
+              build\*.exe
+              build\*.dll
+          retention-days: 1
