--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,22 +37,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cmake generate
-        run: ${{env.QT_ROOT_DIR}}\bin\qt-cmake.bat -G Ninja -S . -B build -DCMAKE_BUILD_TYPE=Release
+        run: cmake -DCMAKE_PREFIX_PATH=${{env.QT_ROOT_DIR}} -S . -B build
 
       - name: Cmake build
-        run: cmake --build build
+        run: cmake --build build --config Release
 
       - name: Cmake deploy dependencies
-        run: ${{env.QT_ROOT_DIR}}\bin\windeployqt.exe --release --no-translations build\StrataBro.exe
+        run: ${{env.QT_ROOT_DIR}}\bin\windeployqt.exe --release --no-translations build\Release\StrataBro.exe
 
       - name: List contents of the build directory
-        run: ls -R build
+        run: ls -R build\Release
         
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: StrataBro
-          path: |
-              build\*.exe
-              build\*.dll
+          path: build\Release
           retention-days: 1
