feat: add dependabot.yml, add release-please.yml versioning, add proper app versioning with CMake, update cmake setup to include winDeploy config, reformat code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,20 @@
 cmake_minimum_required(VERSION 3.16)
-project(StrataBro LANGUAGES CXX)
+
+file(READ "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt" PROJECT_VERSION)
+string(STRIP "${PROJECT_VERSION}" PROJECT_VERSION)
+
+string(REGEX MATCH "^([0-9]+)\\.([0-9]+)\\.([0-9]+)" _ ${PROJECT_VERSION})
+set(PROJECT_VERSION_MAJOR ${CMAKE_MATCH_1})
+set(PROJECT_VERSION_MINOR ${CMAKE_MATCH_2})
+set(PROJECT_VERSION_PATCH ${CMAKE_MATCH_3})
+
+project(
+        StrataBro
+        VERSION ${PROJECT_VERSION}
+        LANGUAGES CXX
+)
+
+message(STATUS "Building StrataBro version ${PROJECT_VERSION}")
 
 include(qt.cmake)
 
@@ -8,7 +23,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR}
-    COMPONENTS
+        COMPONENTS
         Core
         Gui
         Widgets
