--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,4 +19,5 @@ jobs:
         id: release
         with:
           token: ${{ secrets.ADMIN_TOKEN }}
-          config-file: .release-please-config.json
+          config-file: .github/.release-please-config.json
+          manifest-file: .github/.release-please-manifest.json
