--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -42,10 +42,50 @@ jobs:
         run: cmake --build build --config Release
 
       - name: Verify executable was created
+        id: verify_exe
         run: |
           if (Test-Path "build\Release\StrataBro.exe") {
             Write-Host "✅ Build successful - executable created"
+            echo "status=success" >> $env:GITHUB_OUTPUT
+            echo "emoji=✅" >> $env:GITHUB_OUTPUT
           } else {
             Write-Host "❌ Build failed - executable not found"
+            echo "status=failure" >> $env:GITHUB_OUTPUT
+            echo "emoji=❌" >> $env:GITHUB_OUTPUT
             exit 1
           }
+
+      - name: Add build summary
+        if: always()
+        run: |
+          $status = "${{ steps.verify_exe.outputs.status }}"
+          $emoji = "${{ steps.verify_exe.outputs.emoji }}"
+          
+          if ("$status" -eq "success") {
+            $result = "✅ Success"
+            $details = "StrataBro.exe was successfully built"
+            $fileSize = (Get-Item "build\Release\StrataBro.exe").Length / 1MB
+            $fileSize = [math]::Round($fileSize, 2)
+            $buildTime = "${{ job.duration }}"
+          } else {
+            $result = "❌ Failure"
+            $details = "StrataBro.exe was not found"
+            $fileSize = "N/A"
+            $buildTime = "${{ job.duration }}"
+          }
+          
+          $summary = @"
+          ## Build Verification Results
+          
+          | Status | Details | File Size | Build Time |
+          | ------ | ------- | --------- | ---------- |
+          | $result | $details | ${fileSize} MB | $buildTime |
+          
+          ### Build Information
+          - Commit: ${{ github.sha }}
+          - Branch: ${{ github.ref_name }}
+          - Triggered by: ${{ github.actor }}
+          - Build date: $(Get-Date -Format "yyyy-MM-dd HH:mm:ss")
+          "@
+          
+          $summary | Out-File -FilePath $env:GITHUB_STEP_SUMMARY -Encoding UTF8
