ci(workflows): Add version file to release please config

--- a/.github/.release-please-config.json
+++ b/.github/.release-please-config.json
@@ -8,6 +8,7 @@
       "draft": false,
       "prerelease": false,
       "include-v-in-tag": true,
+      "version-file": "VERSION.txt",
       "changelog-sections": [
         {"type": "feat", "section": "Features", "hidden": false},
         {"type": "fix", "section": "Bug Fixes", "hidden": false},
